<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Recomendaciones"
    android:background="@drawable/white_wallpaper">

    <include
        android:id="@+id/includedButton"
        layout="@layout/activity_button_return_dashboard"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="238dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btPinterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tablero_fit_pinterest" />
        <Button
            android:id="@+id/btFitmales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitmalesclub_ig"/>

        <Button
            android:id="@+id/btYT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_en_yt" />


        <Button
            android:id="@+id/btKatb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/katb_fit_ig"/>

        <Button
            android:id="@+id/btCoach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coach_fav" />

        <Button
            android:id="@+id/btVitonica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitonica_com" />

        <Button
            android:id="@+id/btWinnie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/winniegana_com"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>